--- a/figma-plugin/ui.html
+++ b/figma-plugin/ui.html
@@ -1894,9 +1894,9 @@
       };
 
       ws.onclose = function () {
-        log('⚠️ 连接断开，正在重连...');
-        // 使用 'waiting' 状态显示"正在连接..."，给用户自动连接的反馈
-        updateStatus('waiting', '正在连接...');
+        log('⚠️ 连接断开，正在重连');
+        // 使用 'waiting' 状态显示"正在连接"，给用户自动连接的反馈
+        updateStatus('waiting', '正在连接');
         
         if (heartbeatTimer) clearInterval(heartbeatTimer);
         if (updateCheckTimer) clearInterval(updateCheckTimer); // 清除更新检查定时器
