--- a/installer/index.html
+++ b/installer/index.html
@@ -516,6 +516,19 @@
     .alert-error { background: var(--danger-bg); color: #CC0000; }
     .alert-info { background: var(--accent-soft); color: #0044AA; }
 
+    /* Alert icons */
+    .alert-icon {
+      width: 16px !important;
+      height: 16px !important;
+      overflow: visible;
+    }
+    
+    .alert-icon svg {
+      width: 100%;
+      height: 100%;
+      overflow: visible;
+    }
+
     /* Icons */
     svg {
       width: 20px;
