fix: comprehensive improvements to dependency installation
- Fixed get-project-root to correctly locate UserPackage root (parent of .app)
- Added package.json existence validation before npm install
- Added post-install verification (check node_modules and critical deps)
- Enhanced error messages with context and troubleshooting hints
- Added --verbose flag to npm install for better debugging
- Improved progress indication during installation
- Rebuilt installer and package

--- a/figma-plugin/ui.html
+++ b/figma-plugin/ui.html
@@ -1632,7 +1632,7 @@
                     <div style="font-size:12px; color: var(--text-secondary); line-height: 1.5;">
                       服务器通常会开机自动启动。<br>
                       如果连接断开，请尝试双击安装包中的：<br>
-                      <code style="background: rgba(0,0,0,0.05); padding: 2px 4px; border-radius: 3px; font-family: monospace;">🚀 手动启动服务器.app</code>
+                      <code style="background: rgba(0,0,0,0.05); padding: 2px 4px; border-radius: 3px; font-family: monospace;">Manual_Start_Server.command</code>
                     </div>
                   </div>
                 </div>
