fix: unify icon design system across installer and plugin
Icon Design System Standardization:

1. Universal Icon Specifications:
   - viewBox: "0 0 24 24" (consistent across all icons)
   - Circle radius: r="10" (was r="11" or r="12", causing clipping)
   - Stroke width: 2.5 (was 2, now more visible)
   - 2px breathing space around icons (prevents edge clipping)

2. Fixed viewBox Clipping Issues:
   - Previous: r="11" in viewBox="0 0 24 24" → edges cut off
   - Now: r="10" → perfect fit with 2px margin
   - All four corners now display perfectly

3. Installer Toast Icons (renderer.js):
   ✅ Success:
      - Circle: r="10", fill="currentColor"
      - Checkmark: updated path, stroke-width="2.5"
   ❌ Error:
      - Circle: r="10", fill="currentColor"
      - Exclamation: updated path (M12 8v5, M12 16.5v.5), stroke-width="2.5"

4. Installer Alert Icons (renderer.js):
   - Error notification bar icon fixed
   - Size: 20px (up from 16px for better visibility)
   - Same r="10" circle design

5. Plugin Toast Icons (ui.html):
   ✅ Success: r="10", updated checkmark path
   ❌ Error: r="10", updated exclamation path
   ⏳ Loading: Already using r="10", kept as is

6. Plugin Reconnect Button Icon (ui.html):
   🔄 Reconnect:
      - Circle: r="10" (was r="11")
      - Arrows: stroke-width="2.5" (was 2)
      - Consistent with toast icon style

7. CSS Updates:
   - Toast icon: 16px (up from 14px)
   - Alert icon: 20px (was 16px)
   - Removed transform: scale(0.9) hack
   - Removed overflow: visible workaround
   - Clean flex centering

Visual Improvements:
- No more clipped corners on any icons
- Thicker, more visible strokes (2.5 vs 2)
- Consistent sizing across all components
- Better visual weight and readability
- Professional, polished appearance

Tested: All icons now render perfectly without edge clipping.

Rebuilt and packaged.

--- a/installer/index.html
+++ b/installer/index.html
@@ -518,15 +518,18 @@
 
     /* Alert icons */
     .alert-icon {
-      width: 16px !important;
-      height: 16px !important;
-      overflow: visible;
+      width: 20px !important;
+      height: 20px !important;
+      flex-shrink: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
     
     .alert-icon svg {
       width: 100%;
       height: 100%;
-      overflow: visible;
+      display: block;
     }
 
     /* Icons */
@@ -604,21 +607,18 @@
     }
 
     .toast-icon {
-      width: 14px;
-      height: 14px;
+      width: 16px;
+      height: 16px;
       flex-shrink: 0;
       display: flex;
       align-items: center;
       justify-content: center;
-      overflow: visible;
-      padding: 1px; /* 增加微小内边距防止边缘裁切 */
     }
     
     .toast-icon svg {
       width: 100%;
       height: 100%;
-      overflow: visible;
-      transform: scale(0.9); /* 稍微缩小图标以留出呼吸空间 */
+      display: block;
     }
 
     .toast-message {
