--- a/figma-plugin/ui.html
+++ b/figma-plugin/ui.html
@@ -2038,9 +2038,9 @@
         // 使用与 toast 风格一致的重试图标（圆形背景 + 重试箭头）
         statusEl.innerHTML = `
           <svg width="12" height="12" viewBox="0 0 24 24" fill="none" style="flex-shrink: 0; margin-right: 6px;">
-            <circle cx="12" cy="12" r="11" fill="currentColor" opacity="0.9"/>
-            <path d="M16.5 8.5v3h-3M7.5 15.5v-3h3" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-            <path d="M16.5 11.5a4.5 4.5 0 1 1-7.5-3.3M7.5 12.5a4.5 4.5 0 1 1 7.5 3.3" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            <circle cx="12" cy="12" r="10" fill="currentColor" opacity="0.9"/>
+            <path d="M16.5 8.5v3h-3M7.5 15.5v-3h3" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M16.5 11.5a4.5 4.5 0 1 1-7.5-3.3M7.5 12.5a4.5 4.5 0 1 1 7.5 3.3" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
           </svg>
           <span>点击重新连接</span>
         `;
@@ -2770,9 +2770,9 @@
     // SVG Icons for Toast
     function getToastIcon(type) {
       if (type === 'success') {
-        return '<svg viewBox="0 0 24 24" fill="none"><circle cx="12" cy="12" r="12" fill="currentColor"/><path d="M17.5 8L10 15.5L6.5 12" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>';
+        return '<svg viewBox="0 0 24 24" fill="none"><circle cx="12" cy="12" r="10" fill="currentColor"/><path d="M16.5 8.5l-5.5 5.5-3-3" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/></svg>';
       } else if (type === 'error') {
-        return '<svg viewBox="0 0 24 24" fill="none"><circle cx="12" cy="12" r="12" fill="currentColor"/><path d="M12 8v4M12 16h.01" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>';
+        return '<svg viewBox="0 0 24 24" fill="none"><circle cx="12" cy="12" r="10" fill="currentColor"/><path d="M12 8v5M12 16.5v.5" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/></svg>';
       } else if (type === 'loading') {
         return '<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="animation: spin 1s linear infinite;"><circle cx="12" cy="12" r="10" stroke-dasharray="31.416" stroke-dashoffset="7.854" opacity="0.3"></circle><circle cx="12" cy="12" r="10" stroke-dasharray="31.416" stroke-dashoffset="23.562"></circle></svg>';
       }
