style: refine QR code icon detailed pattern
Updated the QR code icon (Header & Modal Trigger):
- Modified the bottom-right quadrant to match the reference design.
- Replaced the single small rect with a 2x2 array of short vertical strokes (capsules).
- Path: M16 15v1 M19 15v1 M16 19v1 M19 19v1
- This creates a more detailed, data-like texture typical of QR codes, while maintaining the rounded, stroke-based icon style.

Rebuilt and packaged.

--- a/figma-plugin/ui.html
+++ b/figma-plugin/ui.html
@@ -1271,7 +1271,7 @@
              <rect x="3" y="3" width="7" height="7" rx="2"></rect>
              <rect x="14" y="3" width="7" height="7" rx="2"></rect>
              <rect x="3" y="14" width="7" height="7" rx="2"></rect>
-             <path d="M16 16h3v3h-3z"></path>
+             <path d="M16 15v1M19 15v1M16 19v1M19 19v1"></path>
            </svg>
         </button>
         <button id="openSettings" class="icon-btn" title="设置">
