ui: update mobile config modal title and icon
1. Updated Header Icon:
   - Replaced QR code icon with a minimalistic Smartphone icon (rounded rect + home line)
   - Matches the stroke style of other header icons
   - Updated tooltip to "手机端配置"

2. Updated Modal Title:
   - Changed modal title from "快捷指令" to "手机端配置"
   - Better reflects the purpose: configuring the mobile side (Shortcut + User ID)

Rebuilt and packaged.

--- a/figma-plugin/ui.html
+++ b/figma-plugin/ui.html
@@ -1266,12 +1266,10 @@
         </div>
       </div>
       <div class="header-actions">
-        <button id="viewUseCases" class="icon-btn" title="快捷指令">
+        <button id="viewUseCases" class="icon-btn" title="手机端配置">
            <svg class="svg-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-             <rect x="3" y="3" width="7" height="7" rx="2"></rect>
-             <rect x="14" y="3" width="7" height="7" rx="2"></rect>
-             <rect x="3" y="14" width="7" height="7" rx="2"></rect>
-             <path d="M16 15v1M19 15v1M16 19v1M19 19v1"></path>
+             <rect x="5" y="2" width="14" height="20" rx="2" ry="2"></rect>
+             <line x1="12" y1="18" x2="12.01" y2="18"></line>
            </svg>
         </button>
         <button id="openSettings" class="icon-btn" title="设置">
@@ -1417,7 +1415,7 @@
   <div id="useCaseOverlay" class="modal-overlay">
     <div class="modal">
       <div class="modal-header">
-        <div class="modal-title">快捷指令</div>
+        <div class="modal-title">手机端配置</div>
         <button id="useCaseClose" class="close-btn">✕</button>
       </div>
       <div class="modal-content" id="useCaseContent">
