style: reduce spacing in reconnect pill
Optimized gap spacing for the Reconnect status pill:
1. CSS: Added specific  for  (reduced from default 6px).
2. JS: Removed inline  from the SVG icon.

This fixes the double-spacing issue (gap + margin) and creates a tighter, more button-like appearance for the retry action, without affecting other status pills.

Rebuilt and packaged.

--- a/figma-plugin/ui.html
+++ b/figma-plugin/ui.html
@@ -215,6 +215,7 @@
         color: var(--danger);
         cursor: pointer;
         transition: all 0.2s ease;
+        gap: 4px;
     }
     
     .connection-pill.reconnect::before {
@@ -2032,7 +2033,7 @@
       if (type === 'disconnected') {
         // 纯线条重试图标，双箭头循环风格（更平衡居中），无背景
         statusEl.innerHTML = `
-          <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink: 0; margin-right: 4px;">
+          <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink: 0;">
             <path d="M23 4v6h-6"></path>
             <path d="M1 20v-6h6"></path>
             <path d="M3.51 9a9 9 0 0 1 14.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0 0 20.49 15"></path>
