ui: unify connection status text
Changed '正在重新连接' to '正在连接' in the reconnect flow.
This unifies the status text across initial connection and reconnection states, reducing unnecessary UI variations.

Rebuilt and packaged.

--- a/figma-plugin/ui.html
+++ b/figma-plugin/ui.html
@@ -1673,7 +1673,7 @@
     function attemptReconnect() {
       reconnectAttempts++;
       log(`🔄 尝试重新连接 (${reconnectAttempts}/${MAX_RECONNECT_ATTEMPTS})...`);
-      updateStatus('waiting', '正在重新连接');
+      updateStatus('waiting', '正在连接');
       
       // 首先尝试普通重连
       setTimeout(() => {
