--- a/figma-plugin/ui.html
+++ b/figma-plugin/ui.html
@@ -1418,9 +1418,8 @@
       <div class="modal-content" id="useCaseContent">
          <div style="display: flex; flex-direction: column; gap: 16px;">
 
-          <div id="shortcutGuideSection">
+          <div id="shortcutGuideSection"  style="display: flex; flex-direction: column; gap: 8px;">
              <div id="shortcutGuideTitle" style="font-weight: 600; margin-bottom: 8px; font-size: 13px;">1. 配置快捷指令</div>
-             <div style="font-size: 12px; color: var(--text-secondary); line-height: 1.6; margin-bottom: 8px;" id="qrSubtitle">扫码获取快捷指令:</div>
              <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 12px;" id="qrCodesContainer">
                 <div style="display: flex; flex-direction: column; align-items: center; gap: 6px;" id="qrGoogleScreenshotContainer">
                   <img id="qrGoogleScreenshot" style="width: 80px; height: 80px;">
