ui: remove duplicate count from sync complete status pill
Change: "同步完成 共X张" → "同步完成"

Reason: The large counter below already shows the count,
no need to repeat it in the status pill.
Keeps the UI clean and focused.

--- a/figma-plugin/ui.html
+++ b/figma-plugin/ui.html
@@ -1849,7 +1849,7 @@
             if (gifBackupCount > 0) {
               updateStatus('connected', '');
             } else {
-            updateStatus('connected', '同步完成 共' + data.count + '张');
+            updateStatus('connected', '同步完成');
             }
            } else if (data.total === 0) {
             log('ℹ️  文件夹中没有截图');
