--- a/installer/index.html
+++ b/installer/index.html
@@ -487,7 +487,8 @@
     }
 
     .dot.active {
-      background: rgba(0, 0, 0, 0.2);;
+      background: var(--success);
+      opacity: 0.5;
       transform: scale(1.2);
     }
 
