--- a/installer/index.html
+++ b/installer/index.html
@@ -488,7 +488,7 @@
 
     .dot.active {
       background: var(--success);
-      opacity: 0.5;
+      opacity: 0.3;
       transform: scale(1.2);
     }
 
@@ -714,14 +714,14 @@
           <div class="status-icon"><svg class="spinner" viewBox="0 0 24 24"><path d="M12 2v4M12 18v4M4.93 4.93l2.83 2.83M16.24 16.24l2.83 2.83M2 12h4M18 12h4M4.93 19.07l2.83-2.83M16.24 7.76l2.83-2.83"/></svg></div>
           <div class="status-content">
             <div class="status-label">Homebrew</div>
-            <div class="status-detail">检查中...</div>
+            <div class="status-detail">检查中</div>
           </div>
         </div>
         <div class="status-item checking">
           <div class="status-icon"><svg class="spinner" viewBox="0 0 24 24"><path d="M12 2v4M12 18v4M4.93 4.93l2.83 2.83M16.24 16.24l2.83 2.83M2 12h4M18 12h4M4.93 19.07l2.83-2.83M16.24 7.76l2.83-2.83"/></svg></div>
           <div class="status-content">
             <div class="status-label">Node.js</div>
-            <div class="status-detail">检查中...</div>
+            <div class="status-detail">检查中</div>
           </div>
         </div>
       </div>
