--- a/figma-plugin/ui.html
+++ b/figma-plugin/ui.html
@@ -2347,7 +2347,7 @@
       }
       useCaseOverlay.classList.add('show');
       // Check scroll state after modal opens
-      setTimeout(checkCommandScroll, 400);
+      // setTimeout(checkCommandScroll, 400);
     }
 
     function closeUseCases() {
