--- a/installer/index.html
+++ b/installer/index.html
@@ -487,7 +487,8 @@
     }
 
     .dot.active {
-      background: var(--success);
+      background: var(--text-primary);
+      border: 2px solid var(--success);
       opacity: 0.3;
       transform: scale(1.2);
     }
