--- a/installer/index.html
+++ b/installer/index.html
@@ -488,8 +488,8 @@
 
     .dot.active {
       background: var(--success);
-      border: 1px solid var(--success);
-      opacity: 0.3;
+      box-shadow: 0 0 0 2px rgba(52, 199, 89, 0.3);
+      opacity: 1;
       transform: scale(1.2);
     }
 
@@ -569,6 +569,77 @@
 
     @keyframes spin {
       100% { transform: rotate(360deg); }
+    }
+
+    /* Modal / Overlay */
+    .overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.4);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 2000;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.2s ease;
+      backdrop-filter: blur(2px);
+    }
+
+    .overlay.show {
+      opacity: 1;
+      pointer-events: auto;
+    }
+
+    .modal {
+      background: var(--bg-card);
+      width: 320px;
+      padding: 24px;
+      border-radius: var(--radius-m);
+      box-shadow: var(--shadow-lg);
+      transform: scale(0.95);
+      transition: transform 0.2s var(--ease-spring);
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+      text-align: center;
+    }
+
+    .overlay.show .modal {
+      transform: scale(1);
+    }
+
+    .modal-icon {
+      width: 48px;
+      height: 48px;
+      background: var(--bg-app);
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 0 auto;
+      color: var(--accent);
+    }
+    
+    .modal-title {
+      font-size: 16px;
+      font-weight: 600;
+      color: var(--text-primary);
+    }
+
+    .modal-message {
+      font-size: 13px;
+      color: var(--text-secondary);
+      line-height: 1.5;
+    }
+
+    .modal-actions {
+      margin-top: 8px;
+      display: flex;
+      justify-content: center;
     }
 
     /* Toast */
@@ -842,6 +913,19 @@
     </div>
     <div style="color: var(--text-tertiary); font-size: 12px;">
       v1.0.0
+    </div>
+  </div>
+
+  <div id="overlay" class="overlay">
+    <div class="modal">
+      <div class="modal-icon">
+        <svg viewBox="0 0 24 24"><circle cx="12" cy="12" r="10" fill="currentColor" fill-opacity="0.1"/><path d="M12 8v5M12 16.5v.5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+      </div>
+      <div class="modal-title" id="modalTitle">提示</div>
+      <div class="modal-message" id="modalMessage">内容</div>
+      <div class="modal-actions">
+        <button class="btn btn-primary" onclick="closeAlert()">我知道了</button>
+      </div>
     </div>
   </div>
 
