--- a/installer/index.html
+++ b/installer/index.html
@@ -612,15 +612,16 @@
     }
 
     .modal-icon {
-      width: 48px;
-      height: 48px;
-      background: var(--bg-app);
-      border-radius: 50%;
       display: flex;
       align-items: center;
       justify-content: center;
       margin: 0 auto;
       color: var(--accent);
+    }
+    
+    .modal-icon svg {
+      width: 48px !important;
+      height: 48px !important;
     }
     
     .modal-title {
