--- a/installer/index.html
+++ b/installer/index.html
@@ -875,7 +875,7 @@
       </div>
       
       <!-- 下一步提示 -->
-      <div style="background: var(--bg-card); border-radius: var(--radius-m); padding: 16px; margin-top: 8px; border: 1px solid var(--border);">
+      <div style="background: var(--bg-card); border-radius: var(--radius-m); padding: 16px; border: 1px solid var(--border);">
         <div style="display: flex; align-items: flex-start; gap: 12px;">
           <!-- Figma Logo SVG -->
           <svg class="figma-icon" viewBox="0 0 200 300" style="flex-shrink: 0; margin-top: 2px;">
