--- a/figma-plugin/ui.html
+++ b/figma-plugin/ui.html
@@ -1363,7 +1363,7 @@
             </svg>
           </div>
             <div class="card-content">
-              <div class="card-title">实时模式吗</div>
+              <div class="card-title">实时模式</div>
               <div class="card-desc">手机截图 实时导入</div>
             </div>
             <div class="chevron">
