--- a/figma-plugin/ui.html
+++ b/figma-plugin/ui.html
@@ -1363,7 +1363,7 @@
             </svg>
           </div>
             <div class="card-content">
-              <div class="card-title">实时模式</div>
+              <div class="card-title">实时模式吗</div>
               <div class="card-desc">手机截图 实时导入</div>
             </div>
             <div class="chevron">
@@ -2730,7 +2730,6 @@
     // 处理统一更新进度（插件 + 服务器）
     function handleUpdateProgress(data) {
       const bannerBtn = document.getElementById('updateBannerNow');
-      const updateText = document.querySelector('.update-banner-text');
       
       if (data.status === 'downloading') {
         showToast(data.message || '正在下载...', 'loading');
@@ -2738,17 +2737,13 @@
           bannerBtn.disabled = true;
           bannerBtn.textContent = '下载中...';
         }
-        if (updateText) {
-          updateText.textContent = data.message || '正在下载最新版本...';
-        }
+        // 不修改 banner 主文字，保持"发现新版本 vX.X.X"
       } else if (data.status === 'installing') {
         showToast(data.message || '正在安装...', 'loading');
         if (bannerBtn) {
           bannerBtn.textContent = '安装中...';
         }
-        if (updateText) {
-          updateText.textContent = data.message || '正在安装更新...';
-        }
+        // 不修改 banner 主文字
       } else if (data.status === 'completed') {
         const successMsg = data.message || `更新完成！已更新 ${data.updatedCount || 0} 个文件`;
         showToast(successMsg, 'success');
@@ -2774,13 +2769,10 @@
         
       } else if (data.status === 'error') {
         showToast(data.message || '更新失败', 'error');
-        // 重置通知条按钮
+        // 重置按钮状态，但保持 banner 主文字不变
         if (bannerBtn) {
           bannerBtn.disabled = false;
           bannerBtn.textContent = '立即更新';
-        }
-        if (updateText) {
-          updateText.textContent = '发现新版本';
         }
       }
     }
