--- a/installer/index.html
+++ b/installer/index.html
@@ -871,7 +871,6 @@
           </div>
         </div>
         <h2 class="step-title">安装完成</h2>
-        <p class="step-description">请前往 Figma 载入插件</p>
       </div>
       
       <!-- 下一步提示 -->
@@ -889,7 +888,7 @@
             <div style="font-size: 13px; font-weight: 600; margin-bottom: 4px;">下一步：导入 Figma 插件</div>
             <div style="font-size: 12px; color: var(--text-secondary); line-height: 1.5;">
               Plugins → Development → Import plugin from manifest<br>
-              选择：<span style="font-family: 'Monaco', 'Courier New', monospace; background: rgba(0,0,0,0.05); padding: 2px 6px; border-radius: 3px; font-size: 11px;">{安装目录}/figma-plugin/manifest.json</span>
+              选择:<span style="font-family: 'Monaco', 'Courier New', monospace; background: rgba(0,0,0,0.05); padding: 2px 6px; border-radius: 3px; font-size: 11px;">{安装目录}/项目文件/figma-plugin/manifest.json</span>
             </div>
           </div>
         </div>
