--- a/installer/index.html
+++ b/installer/index.html
@@ -812,6 +812,28 @@
         </div>
       </div>
 
+      <!-- 统一安装按钮区域 -->
+      <div id="installAllSection" style="display: none; margin-top: 16px;">
+        <div class="alert alert-info">
+          <div class="alert-icon">
+            <svg viewBox="0 0 24 24"><circle cx="12" cy="12" r="10" fill="currentColor" fill-opacity="0.1"/><path d="M12 8v5M12 16.5v.5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+          </div>
+          <div>
+            检测到部分依赖未安装，点击下方按钮一键安装所有缺失依赖，安装过程中只需输入一次密码
+          </div>
+        </div>
+        <div style="display: flex; gap: 12px; margin-top: 12px;">
+          <button class="btn btn-primary" onclick="installAllDependencies()" id="installAllBtn" style="flex: 1;">
+            <svg viewBox="0 0 24 24"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4M7 10l5 5 5-5M12 15V3"/></svg>
+            一键安装所有依赖
+          </button>
+          <button class="btn btn-secondary" onclick="recheckDependencies()" id="recheckBtn">
+            <svg viewBox="0 0 24 24"><path d="M1 4v6h6M23 20v-6h-6"/><path d="M20.49 9A9 9 0 0 0 5.64 5.64L1 10m22 4l-4.64 4.36A9 9 0 0 1 3.51 15"/></svg>
+            重新检测
+          </button>
+        </div>
+      </div>
+
       <div class="button-group" id="step2Buttons" style="display: none;">
         <button class="btn btn-secondary" onclick="prevStep()">上一步</button>
         <div style="flex:1"></div>
