--- a/figma-plugin/ui.html
+++ b/figma-plugin/ui.html
@@ -4120,7 +4120,7 @@
       </div>
       
       <!-- Preview Area (click to enter fullscreen) -->
-      <div id="timelinePreviewArea" style="flex-shrink: 0; height: 160px; background: var(--preview-bg); display: flex; justify-content: center; align-items: center; position: relative; overflow: hidden; border-bottom: 1px solid var(--divider); cursor: pointer;" title="点击全屏预览">
+      <div id="timelinePreviewArea" style="flex-shrink: 0; height: 160px; background: var(--preview-bg); display: flex; justify-content: center; align-items: center; position: relative; overflow: hidden; border-bottom: 1px solid var(--divider); cursor: pointer;">
         <div id="timelinePreviewContainer" style="position: relative; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none;">
           <div style="color: var(--preview-text); font-size: 13px;">加载预览中...</div>
         </div>
@@ -4128,10 +4128,8 @@
           <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
             <polyline points="15 3 21 3 21 9"></polyline>
             <polyline points="9 21 3 21 3 15"></polyline>
-            <line x1="21" y1="3" x2="14" y2="10"></line>
-            <line x1="3" y1="21" x2="10" y2="14"></line>
           </svg>
-          点击全屏
+          全屏
         </div>
       </div>
 
